Revision history for Perl extension Wx.

0.9906 TBR
    - wrapped wxWebView ( wxWidgets ge 2.9.3 )
    - wrapped wxTimePickerCtrl ( wxWidgets ge 2.9.3 )    

0.9905 Fri Mar 16 2012
    - wrapped wxPropertyGrid ( wxWidgets ge 2.9.3 )
    - wrapped native wxTreeListCtrl ( wxWidgets ge 2.9.3 )
    - wrapped wxRibbonControl ( wxWidgets ge 2.9.3 )
    - ShowModal implementation for wxPrintDialog and wxPageSetupDialog
      ( thanks to Tomohiro Hosaka )
    - recent EUMM breaks EU_MY_Metafile

0.9904 Tue Feb 28 2012
    - Implemented TextCtrlIface for RichTextCtrl in >= 2.9.2
    - Implemented TextCtrlIface for SearchCtrl in >= 2.9.2
    - several 2.9.2 / 2.9.3 compatibility changes
    - Some additional RichText events wrapped - ( thanks to Steve Cookson )
    - wrapped STC specific LineUp and LineDown
    - wrapped some specific Set/GetLayoutDirection
    - Fixes for OSX Xcode 4.3 builds

0.9903 Wed Nov 09 08:00:00 BST 2011
    - Remove force of static binding for mingw libgcc & libstdc++
0.9902 Thu Oct 13 08:00:00 BST 2011
    - 2.9.2 will now build with recent mingw compilers (>= gcc 4.5.2)
    - Fixed MSVC6 build (broken in 0.9702)
    - wrapped wxLogChain::DetachOldLog
    - added wxDF_UNICODETEXT
    - added wxMediaCtrl constants for all events

0.9901 Mon June 06 12:00:00 BST 2011
    - Bumped ExtUtils::XSpp dependency to 0.1602
    - added Wx::Frame::SendSizeEvent

0.99  Thu May 05 08:00:00 BST 2011
    - Release 0.98_01 as 0.99

0.98_01 Thu Apr 21 20:31:30 CEST 2010
    - Added wxProgressDialog::Pulse (wxWidgets 2.8)
    - Mac SetFrontProcess can be switched off for editors 
      and tests using env variable. Still switched on by default. 
      Added detail to Wx pod
    - Added several wxLog functions & methods + Wx::PLlog::Flush
    - Added wxDateTime::IsValid wxSplitterWindow::UpdateSize
    - fix for Wx::Locale::FindLanguageInfo / GetLanguageInfo
    - wxPli_create_evthandler added for VListBox and VScrolledWindow